--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/2jBN8jdG/Fortune-Track-Logo.png">
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/2jBN8jdG/Fortune-Track-Logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/2jBN8jdG/Fortune-Track-Logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.postimg.cc/2jBN8jdG/Fortune-Track-Logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    
     <title>FortuneTrack</title>
   </head>
   <body>
